--- a/front-flms/src/components/PluginsList.css
+++ b/front-flms/src/components/PluginsList.css
@@ -3,3 +3,14 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+
+.filter{
+    margin: 20px;
+}
+
+
+.filter button{
+    margin-top: 10px;
+    margin-left: 20px;
+}
