--- a/front-flms/src/index.css
+++ b/front-flms/src/index.css
@@ -16,3 +16,15 @@ code {
 .content{
   padding: 20px;
 }
+
+
+html, body, #root, .App {
+    margin: 0;
+    min-height: 100vh;
+    overflow: auto;
+}
+
+
+body{
+    min-height: 100%;
+}
