various css and little bug

--- a/front-flms/src/components/PluginsList.css
+++ b/front-flms/src/components/PluginsList.css
@@ -38,3 +38,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+
+.detailsAddComment .form-group{
+    width: 80%;
+}
+
+.pluginDetailsComment .card{
+    width: 80%;
+}
