--- a/front-flms/src/components/PluginsList.css
+++ b/front-flms/src/components/PluginsList.css
@@ -3,6 +3,12 @@
     min-height: 100vh;
 }
 
+.listCharge{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
 .cardPluginList{
     margin-bottom: 10px;
 }
