#24 loading for plugin details

--- a/front-flms/src/components/PluginDetails.css
+++ b/front-flms/src/components/PluginDetails.css
@@ -1,3 +1,10 @@
+.detailsLoad{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .Image {
     max-width: 200px;
 }
